# step_by_step_c

./: .gitignore  README.md
arrays/ex10_swap_all/: Makefile  swap_all.c
arrays/ex11_switch_pairs/: Makefile  switch_pairs.c
arrays/ex12_temperatures/: Makefile  temperatures.c
arrays/ex1_array_mystery7/: Makefile  answer.txt
arrays/ex2_count_short_strings/: Makefile  count_short_strings.c
arrays/ex3_find_pairs/: Makefile
arrays/ex4_max_row/: Makefile
arrays/ex5_most_frequent_digit/: Makefile
arrays/ex6_print_reverse/: Makefile
arrays/ex7_reverse/: Makefile  reverse.c
arrays/ex8_section_attendance/: Makefile  section_attendance.c
arrays/ex9_swap/: Makefile  swap  swap.c
exercises/ch1_programming_basics/: ex12_receipt2.c  ex13_retirement_age.c  ex2_basic_function_calls.c  ex4_egg_figures.c  meson.build
exercises/ch2_arrays/: ex1_array_mystery7.c  ex3_find_pairs.c  ex4_max_row.c  ex5_most_frequent_digit.c  ex6_print_reverse.c  ex8_section_attendance.c  ex9_swap.c  meson.build
exercises/ch3_bitwise_ops/: ex1_ascii_to_hex1.c  ex2_binary_to_hex1.c  ex3_bit_array_puzzle.c  meson.build
programming_basics/ex10_function_tracing3/: Makefile  answer.txt  function_tracing3.c
programming_basics/ex11_receipt/: README.md
programming_basics/ex12_receipt2/: Makefile  receipt2.c
programming_basics/ex13_retirement_age/: Makefile  retirement_age.c
programming_basics/ex1_hello_world/: Makefile  hello_world.c
programming_basics/ex2_basic_function_calls/: Makefile  answer.txt
programming_basics/ex3_cat/: Makefile  cat.c
programming_basics/ex4_egg_figures/: Makefile
programming_basics/ex5_escape_seq1/: Makefile  answer.txt  escape_seq1.c
programming_basics/ex6_escape_seq2/: Makefile  escape_seq2.c
programming_basics/ex7_escape_seq3/: Makefile  escape_seq3.c
programming_basics/ex8_function_tracing1/: Makefile  answer.txt  function_tracing1.c
programming_basics/ex9_function_tracing2/: Makefile  answer.txt  function_tracing2.c
tooling/: meson.build  yman_artool.c  yman_artool.h  yman_errtool.c  yman_errtool.h  yman_strtool.c  yman_strtool.h
tooling/tests/: test_yman_strtool.c
