project('ch3_bitwise_ops', 'c',
  version : '0.1',
  default_options : ['warning_level=3'])

add_project_arguments('-g3',
                      '-Wconversion',
                      '-Wdouble-promotion',
                      '-Wno-unused-parameter',
                      language: 'c')

executable('ascii_to_hex1', 'ex1_ascii_to_hex1.c')
executable('binary_to_hex1', 'ex2_binary_to_hex1.c')
executable('bit_array_puzzle', 'ex3_bit_array_puzzle.c')
